--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.5.2
 Django==3.2.8
+django-cors-headers==3.13.0
 django-filter==22.1
 djangorestframework==3.13.1
+djangorestframework-camel-case==1.3.0
 Markdown==3.4.1
+python-dotenv==0.20.0
 pytz==2022.1
 sqlparse==0.4.2
